k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpapibackend
  name: xpapibackend
  namespace: xp-apibackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xpapibackend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpapibackend
        deployment: xpapibackend
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/xp-apibackend/xpapibackend:latest
        imagePullPolicy: IfNotPresent
        name: xpapibackend
        ports:
        - containerPort: 1337
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
