k8s/apiingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpapibackend-ingress
  namespace: xp-apibackend
spec:
  rules:
    - host: xpapibackend-xp-apibackend.apps.ocp.nttscloud.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /apiadmin
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /users-permissions
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /content-manager
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /i18n
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /plugins
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
          - path: /content-type-builder
            pathType: Prefix
            backend:
              service:
                name: xpapibackend
                port:
                  number: 1337
