k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: xpapibackend
  name: xpapibackend
  namespace: xp-apibackend
spec:
  host: xpapibackend-xp-apibackend.apps.ocp.nttscloud.com
  port:
    targetPort: 1337-tcp
  to:
    kind: Service
    name: xpapibackend
    weight: 100
  wildcardPolicy: None
